[build-system]
requires = ["setuptools>=68.1.2"]
build-backend = "setuptools.build_meta"

[project]
name = "yusina"
version = "0.1.0-alpha"
description = "a package for pretty figures"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["science", "informatics", "bioinformatics", "cheminformatics", "scientific-figures", "data-visualisation", "data-analysis"]
authors = [{name = "Lucina-May Nollen"}]
maintainers =[{name = "Lucina-May Nollen"}]

classifiers = [
    "Development Status :: 3 - Alpha",
    "License ::  MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]


dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
]

[project.optional-dependencies]
extended = [
    "scikit-learn",
    "umap",
    "seaborn",
]

[project.urls]
"homepage" = "https://github.com/lucinamay/yusina"
